--- a/modpack/manifest.json
+++ b/modpack/manifest.json
@@ -13,7 +13,7 @@
   "manifestVersion": 1,
   "version": "1.0",
   "author": "DbpGaming",
-  "name": "Vanilla Compatible Base Pack",
+  "name": "Onward!",
   "files": [
     {
       "projectID": 60089,
