add gate of babylon

--- a/modpack/manifest.json
+++ b/modpack/manifest.json
@@ -861,6 +861,14 @@
       }
     },
     {
+      "projectID": 407500,
+      "fileID": 3644733,
+      "required": true,
+      "__meta": {
+        "name": "Gate of Babylon"
+      }
+    },
+    {
       "projectID": 408481,
       "fileID": 3543238,
       "required": true,
