--- a/modpack/manifest.json
+++ b/modpack/manifest.json
@@ -549,6 +549,17 @@
       }
     },
     {
+      "projectID": 374143,
+      "fileID": 3629971,
+      "required": true,
+      "__meta": {
+        "name": "Sandwichable",
+        "dependencies": [
+          306612
+        ]
+      }
+    },
+    {
       "projectID": 374274,
       "fileID": 2934596,
       "required": true,
@@ -709,6 +720,18 @@
       }
     },
     {
+      "projectID": 391378,
+      "fileID": 3659569,
+      "required": true,
+      "__meta": {
+        "name": "Oh The Biomes You'll Go Refabricated",
+        "dependencies": [
+          306612,
+          565956
+        ]
+      }
+    },
+    {
       "projectID": 391502,
       "fileID": 3538150,
       "required": true,
@@ -834,6 +857,17 @@
       }
     },
     {
+      "projectID": 397903,
+      "fileID": 3567467,
+      "required": true,
+      "__meta": {
+        "name": "Elytra Trinket (Fabric)",
+        "dependencies": [
+          341284
+        ]
+      }
+    },
+    {
       "projectID": 398614,
       "fileID": 3657658,
       "required": true,
@@ -898,6 +932,14 @@
       }
     },
     {
+      "projectID": 403914,
+      "fileID": 3657867,
+      "required": true,
+      "__meta": {
+        "name": "Red Bits"
+      }
+    },
+    {
       "projectID": 404870,
       "fileID": 3637125,
       "required": true,
@@ -954,6 +996,14 @@
       "required": true,
       "__meta": {
         "name": "ToolTipFix"
+      }
+    },
+    {
+      "projectID": 412225,
+      "fileID": 3611454,
+      "required": true,
+      "__meta": {
+        "name": "Harvest Scythes"
       }
     },
     {
@@ -1701,6 +1751,18 @@
       }
     },
     {
+      "projectID": 517833,
+      "fileID": 3625099,
+      "required": true,
+      "__meta": {
+        "name": "Arcanus",
+        "dependencies": [
+          306612,
+          319057
+        ]
+      }
+    },
+    {
       "projectID": 518319,
       "fileID": 3545709,
       "required": true,
@@ -1800,11 +1862,35 @@
       }
     },
     {
+      "projectID": 534373,
+      "fileID": 3647948,
+      "required": true,
+      "__meta": {
+        "name": "Goblin Traders (Fabric)",
+        "dependencies": [
+          306612,
+          319057
+        ]
+      }
+    },
+    {
       "projectID": 535541,
       "fileID": 3654662,
       "required": true,
       "__meta": {
         "name": "Chalk (Fabric)"
+      }
+    },
+    {
+      "projectID": 536648,
+      "fileID": 3649759,
+      "required": true,
+      "__meta": {
+        "name": "ThonkUtil",
+        "explicit": false,
+        "dependencies": [
+          306612
+        ]
       }
     },
     {
@@ -1828,6 +1914,20 @@
       }
     },
     {
+      "projectID": 537653,
+      "fileID": 3660943,
+      "required": true,
+      "__meta": {
+        "name": "End Goblin Traders (Fabric)",
+        "dependencies": [
+          306612,
+          536648,
+          534373,
+          319057
+        ]
+      }
+    },
+    {
       "projectID": 538011,
       "fileID": 3594300,
       "required": true,
@@ -1835,6 +1935,18 @@
         "name": "Basic Shields [Fabric]",
         "dependencies": [
           380649
+        ]
+      }
+    },
+    {
+      "projectID": 546590,
+      "fileID": 3636527,
+      "required": true,
+      "__meta": {
+        "name": "Eden Ring",
+        "dependencies": [
+          495191,
+          306612
         ]
       }
     },
@@ -2109,6 +2221,18 @@
       "required": true,
       "__meta": {
         "name": "Show Me What You Got",
+        "dependencies": [
+          306612
+        ]
+      }
+    },
+    {
+      "projectID": 565956,
+      "fileID": 3651451,
+      "required": true,
+      "__meta": {
+        "name": "TerraBlender (Fabric)",
+        "explicit": false,
         "dependencies": [
           306612
         ]
